Correct deploy.zip structure

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
           cp -r public src deploy/
 
       - name: Zip deploy folder
-        run: zip -r deploy.zip deploy
+        run: cd deploy && zip -r ../deploy.zip .
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v18
